# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Oct 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.2.9999.ebuild:
  Sync from Portage tree.

  13 Sep 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.2.9999.ebuild:
  Sync from Portage tree.

  12 Sep 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.2.9999.ebuild:
  Use lightweight checkout for WORKDIR, bug 434746.

  12 Sep 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.2.9999.ebuild:
  Bootstrapping in src_compile shouldn't be needed, because we already call
  eautoreconf in src_prepare.

  12 Sep 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.2.9999.ebuild:
  Undo previous change. Sync from Portage tree.

  25 Aug 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.2.9999.ebuild:
  Display some elog messages only on first installation.

*emacs-vcs-24.2.9999 (25 Aug 2012)

  25 Aug 2012; Ulrich Müller <ulm@gentoo.org>
  +files/emacs-24.0.92-ns-appdirs.patch, +emacs-vcs-24.2.9999.ebuild,
  +metadata.xml:
  Copied from Portage tree.
